# catvox

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: activate.sh  clean.sh  docs.sh  venv.sh
src/catvox/: args.py  data.py  main.py  pipeline.py
src/catvox/cli/: args.py  hidden_groups.py  pipeline.py
src/catvox/inputs/: __init__.py
src/catvox/pipeline/: activation.py
src/catvox/processors/: __init__.py  catvox.py  processor.py
src/catvox/processors/convert/: ffmpeg.py  sample_rate.py
src/catvox/processors/filter/: __init__.py  silence.py  speech.py
src/catvox/processors/input/: __init__.py  file.py  input.py  sounddevice.py  stdin.py
src/catvox/processors/output/: __init__.py  text.py
src/catvox/processors/transcribe/: whisper.py
src/catvox/processors/transform/: demux.py
src/catvox/stream/: __init__.py  buffer.py  lock.py  stream.py
tests/unit/cli/: test_args.py  test_get_processors.py
tests/unit/utils/: test_args.py
