[project]
name = "catvox"
description = "like cat, but for voice"
version = "0.2.0"
readme = "README.md"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
dependencies = [
    "openai-whisper",
    "sounddevice",
    "torch_weightsonly",
    "streamz"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project.scripts]
catvox = "catvox:main.main"
